update storage_list for sdcard

--- a/overlay/frameworks/base/core/res/res/xml/storage_list.xml
+++ b/overlay/frameworks/base/core/res/res/xml/storage_list.xml
@@ -24,7 +24,7 @@
     android:emulated="true" 
     android:mtpReserve="100" />
 <storage
-    android:mountPoint="/Removable/MicroSD"
+    android:mountPoint="/storage/MicroSD"
     android:storageDescription="@string/storage_sd_card"
     android:primary="false"
     android:removable="true"
